Closed Bug 1144900 Opened 9 years ago Closed 9 years ago

Assertion running mach jetpack-package addon-sdk/source/test/test-selection.js under windows debug builds

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: mossop, Assigned: mossop)

References

Details

Attachments

(1 file)

In trying to reproduce bug 1144750 I'm hitting a gfx assertion that I don't understand:

Assertion failure: false, at c:/mozilla/source/trunk/gfx/thebes/gfxWindowsPlatform.cpp:1174
#01: gfxWindowsPlatform::UpdateRenderMode (c:\mozilla\source\trunk\gfx\thebes\gfxwindowsplatform.cpp:479)
#02: nsWindow::OnPaint (c:\mozilla\source\trunk\widget\windows\nswindowgfx.cpp:196)
#03: nsWindow::ProcessMessage (c:\mozilla\source\trunk\widget\windows\nswindow.cpp:4768)
#04: nsWindow::WindowProcInternal (c:\mozilla\source\trunk\widget\windows\nswindow.cpp:4345)
#05: CallWindowProcCrashProtected (c:\mozilla\source\trunk\xpcom\base\nscrashonexception.cpp:35)
#06: nsWindow::WindowProc (c:\mozilla\source\trunk\widget\windows\nswindow.cpp:4297)
#07: gapfnScSendMessage[USER32 +0x162fa]
#08: GetDC[USER32 +0x17316]
#09: GetThreadDesktop[USER32 +0x16de8]
#10: GetThreadDesktop[USER32 +0x16e44]
#11: KiUserCallbackDispatcher[ntdll +0x1010a]
#12: DispatchMessageW[USER32 +0x1788a]
#13: nsAppShell::ProcessNextNativeEvent (c:\mozilla\source\trunk\widget\windows\nsappshell.cpp:294)
#14: nsBaseAppShell::DoProcessNextNativeEvent (c:\mozilla\source\trunk\widget\nsbaseappshell.cpp:140)
#15: nsBaseAppShell::OnProcessNextEvent (c:\mozilla\source\trunk\widget\nsbaseappshell.cpp:280)
#16: nsThread::ProcessNextEvent (c:\mozilla\source\trunk\xpcom\threads\nsthread.cpp:830)
#17: NS_ProcessNextEvent (c:\mozilla\source\trunk\xpcom\glue\nsthreadutils.cpp:265)
#18: mozilla::ipc::MessagePump::Run (c:\mozilla\source\trunk\ipc\glue\messagepump.cpp:99)
#19: MessageLoop::RunInternal (c:\mozilla\source\trunk\ipc\chromium\src\base\message_loop.cc:234)
#20: MessageLoop::RunHandler (c:\mozilla\source\trunk\ipc\chromium\src\base\message_loop.cc:227)
#21: MessageLoop::Run (c:\mozilla\source\trunk\ipc\chromium\src\base\message_loop.cc:201)
#22: nsBaseAppShell::Run (c:\mozilla\source\trunk\widget\nsbaseappshell.cpp:166)
#23: nsAppShell::Run (c:\mozilla\source\trunk\widget\windows\nsappshell.cpp:178)
#24: nsAppStartup::Run (c:\mozilla\source\trunk\toolkit\components\startup\nsappstartup.cpp:281)
#25: XREMain::XRE_mainRun (c:\mozilla\source\trunk\toolkit\xre\nsapprunner.cpp:4202)
#26: XREMain::XRE_main (c:\mozilla\source\trunk\toolkit\xre\nsapprunner.cpp:4278)
#27: XRE_main (c:\mozilla\source\trunk\toolkit\xre\nsapprunner.cpp:4498)
#28: do_main (c:\mozilla\source\trunk\browser\app\nsbrowserapp.cpp:294)
#29: NS_internal_main (c:\mozilla\source\trunk\browser\app\nsbrowserapp.cpp:667)
#30: wmain (c:\mozilla\source\trunk\toolkit\xre\nswindowswmain.cpp:117)
#31: __tmainCRTStartup (f:\dd\vctools\crt\crtw32\startup\crt0.c:255)
#32: BaseThreadInitThunk[kernel32 +0x1338a]
#33: RtlInitializeExceptionChain[ntdll +0x39f72]
#34: RtlInitializeExceptionChain[ntdll +0x39f45]

At the time of assertion hr is 0x8007000e. It be something to do with me running the test over RDP.
Flags: needinfo?(bas)
If you just add E_OUTOFMEMORY to the enum there and an DeviceResetReason::OUT_OF_MEMORY enum value as well. Does it work properly?
Flags: needinfo?(bas)
Attached patch patchSplinter Review
Seems to work and got a fully green try run. I also added in a break that appeared to be missing.
Attachment #8580360 - Flags: review?(bas)
Comment on attachment 8580360 [details] [diff] [review]
patch

Review of attachment 8580360 [details] [diff] [review]:
-----------------------------------------------------------------

Can you add this to the information in the telemetry json? (i.e. just add 'out of memory' to the end of the documentation list, there's already enough buckets)
Attachment #8580360 - Flags: review?(bas) → review+
(In reply to Bas Schouten (:bas.schouten) from comment #3)
> Comment on attachment 8580360 [details] [diff] [review]
> patch
> 
> Review of attachment 8580360 [details] [diff] [review]:
> -----------------------------------------------------------------
> 
> Can you add this to the information in the telemetry json? (i.e. just add
> 'out of memory' to the end of the documentation list, there's already enough
> buckets)

Which telemetry json do you mean?
Flags: needinfo?(bas)
(In reply to Dave Townsend [:mossop] from comment #4)
> (In reply to Bas Schouten (:bas.schouten) from comment #3)
> > Comment on attachment 8580360 [details] [diff] [review]
> > patch
> > 
> > Review of attachment 8580360 [details] [diff] [review]:
> > -----------------------------------------------------------------
> > 
> > Can you add this to the information in the telemetry json? (i.e. just add
> > 'out of memory' to the end of the documentation list, there's already enough
> > buckets)
> 
> Which telemetry json do you mean?

toolkit/components/telemetry/Histograms.json
Flags: needinfo?(bas)
https://hg.mozilla.org/integration/fx-team/rev/f8455aca5a01
Assignee: nobody → dtownsend
Status: NEW → ASSIGNED
https://hg.mozilla.org/mozilla-central/rev/f8455aca5a01
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: