Bug 1144900: Fix windows gfx out of memory assertion. r=Bas

--HG--
extra : rebase_source : 1158df9324b3a1f30f7a446d7713ca17ad26a5fb